force-app/main/default/objects/AAO_Persona_Expectation__mdt/fields/AAO_Expected_From_Stage__c.field-meta.xml
<CustomField>
    <fullName>AAO_Expected_From_Stage__c</fullName>
    <description>THE STAGE ORDINAL FROM WHICH THIS PERSONA IS EXPECTED, blank for never. Blank is the honest default and not an omission: WHICH personas a stage expects is a methodology statement, and nothing in the captured vendor surface or in any ruling states one, so our seed ships the mechanism with NO GUIDANCE on the content rather than inventing a methodology nobody graded. Same null semantics as the by-stage marker: blank never flags, and blank is never read as stage zero.</description>
    <label>Expected From Stage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>