force-app/main/default/objects/AAO_Persona_Expectation__mdt/fields/AAO_Note__c.field-meta.xml
<CustomField>
    <fullName>AAO_Note__c</fullName>
    <description>Why this row reads as it does, in words, for whoever grades it next.</description>
    <label>Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>