force-app/main/default/objects/AAO_Persona_Expectation__mdt/fields/AAO_Persona__c.field-meta.xml
<CustomField>
    <fullName>AAO_Persona__c</fullName>
    <description>The STORED value on ALTF__Relationship_Map_Persona__c.ALTF__Persona__c, never its label. An org relabels a slot and the ranking must not silently start meaning something else - the seventy-sixth stamp, and this vocabulary carries a live specimen of the hazard.</description>
    <label>Persona</label>
    <length>100</length>
    <type>Text</type>
</CustomField>