force-app/main/default/objects/AAO_Persona_Expectation__mdt/fields/AAO_Title_Patterns__c.field-meta.xml
<CustomField>
    <fullName>AAO_Title_Patterns__c</fullName>
    <description>Comma-delimited lowercase substrings that recognise this persona in a Contact title. A DETERMINISTIC synonym list and never a model, per the twenty-fourth stamp&apos;s ruling on title normalisation. Facts about words rather than a methodology statement, which is why our seed can carry these while it correctly carries no expectation content. A title matching more than one persona matches NONE and is reported: exactly one match links, more than one is ambiguous and holds, which is the identity ladder&apos;s own discipline.</description>
    <label>Title Patterns</label>
    <length>255</length>
    <type>Text</type>
</CustomField>